# pypokereval

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  bug-1823.py  configure.ac  pokereval.py  pypoker-eval.pc.in  pypoker-eval.spec.in  pypoker-eval.vcproj  pypokereval.c  test.py
config/: ccpython.m4  python.m4
debian/: changelog  control  control.dapper  control.edgy  control.etch  control.hoary  control.unstable  copyright  python-pypoker-eval.install  python.install  python2.3-pypoker-eval.install  rules  rules.mk
gentoo/dev-games/pypoker-eval/: pypoker-eval-131.0-r1.ebuild  pypoker-eval-132.0-r1.ebuild
